# herdr-pc-ram-and-cpu-usage-overlay

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  herdr-plugin.toml  index.js  jsconfig.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-18-windows-port.md  2026-07-19-agent-attention-timer.md  2026-07-19-cache-timer-color-sound.md
docs/superpowers/specs/: 2026-07-18-windows-port-design.md  2026-07-19-agent-attention-timer-design.md  2026-07-19-cache-timer-color-sound-design.md
src/: collect.rs  config.rs  daemon.rs  herdr.rs  main.rs  model.rs  proc.rs  render.rs  sound.rs  timer.rs
src/herdr/: mod.rs  transport.rs
src/proc/: linux.rs  mod.rs  windows.rs
