[package]
name = "space-usage"
version = "1.0.0"
edition = "2021"
description = "CPU and RAM usage per herdr space, grouped under the branch name."
license = "MIT"

# Binary target inherits the package name => target/release/space-usage,
# which is what herdr-plugin.toml's commands point at.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
signal-hook = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
