[package]
name = "space-usage"
version = "1.0.0"
edition = "2021"
description = "CPU and RAM usage per herdr space, grouped under the branch name."
license = "MIT"

# Binary target inherits the package name => target/release/space-usage,
# which is what herdr-plugin.toml's commands point at.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_SystemInformation",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_Pipes",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
